[gd_scene load_steps=8 format=2]

[ext_resource path="res://assets/theme/gdquest.theme" type="Theme" id=1]
[ext_resource path="res://src/UI/Menus/Login/LoginForm.gd" type="Script" id=2]
[ext_resource path="res://src/UI/Elements/StatusPanel.tscn" type="PackedScene" id=3]
[ext_resource path="res://assets/theme/stylebox/button_focused_margin.tres" type="StyleBox" id=4]
[ext_resource path="res://src/UI/Elements/LineEditValidate.tscn" type="PackedScene" id=5]
[ext_resource path="res://src/UI/Menus/Login/EmailField.gd" type="Script" id=6]
[ext_resource path="res://src/UI/Menus/Login/PasswordField.gd" type="Script" id=7]

[node name="LoginForm" type="Panel"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -292.0
margin_top = -136.0
margin_right = 292.0
margin_bottom = 136.0
rect_min_size = Vector2( 0, 272 )
theme = ExtResource( 1 )
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Email" type="HBoxContainer" parent="."]
anchor_right = 1.0
margin_left = 16.0
margin_top = 16.0
margin_right = -17.0
margin_bottom = 72.0
size_flags_horizontal = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Email"]
margin_top = 12.0
margin_right = 120.0
margin_bottom = 43.0
rect_min_size = Vector2( 120, 0 )
text = "Email"

[node name="LineEditValidate" parent="Email" instance=ExtResource( 5 )]
margin_left = 136.0
margin_right = 551.0
placeholder_text = "me@example.com"
script = ExtResource( 6 )

[node name="Password" type="HBoxContainer" parent="."]
anchor_right = 1.0
margin_left = 16.0
margin_top = 88.0
margin_right = -17.0
margin_bottom = 136.0
size_flags_horizontal = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Password"]
margin_top = 8.0
margin_right = 120.0
margin_bottom = 39.0
rect_min_size = Vector2( 120, 0 )
text = "Password"

[node name="LineEditValidate" parent="Password" instance=ExtResource( 5 )]
margin_left = 136.0
margin_right = 551.0
margin_bottom = 48.0
secret = true
script = ExtResource( 7 )

[node name="RememberEmail" type="CheckBox" parent="."]
anchor_right = 1.0
margin_left = 154.0
margin_top = 147.0
margin_right = -227.0
margin_bottom = 179.0
custom_styles/focus = ExtResource( 4 )
shortcut_in_tooltip = false
text = "Remember me"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="."]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 16.0
margin_top = -80.0
margin_right = -17.0
margin_bottom = -16.0
size_flags_horizontal = 4
size_flags_vertical = 4
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LoginButton" type="Button" parent="HBoxContainer"]
margin_right = 267.0
margin_bottom = 64.0
rect_min_size = Vector2( 120, 60 )
size_flags_horizontal = 3
text = "Log in"

[node name="RegisterButton" type="Button" parent="HBoxContainer"]
margin_left = 283.0
margin_right = 551.0
margin_bottom = 64.0
rect_min_size = Vector2( 120, 60 )
size_flags_horizontal = 3
text = "Register"

[node name="StatusPanel" parent="." instance=ExtResource( 3 )]
[connection signal="text_entered" from="Email/LineEditValidate" to="." method="_on_LineEditValidate_text_entered"]
[connection signal="text_entered" from="Password/LineEditValidate" to="." method="_on_LineEditValidate_text_entered"]
[connection signal="pressed" from="HBoxContainer/LoginButton" to="." method="_on_LoginButton_pressed"]
[connection signal="pressed" from="HBoxContainer/RegisterButton" to="." method="_on_RegisterButton_pressed"]
